--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
           
         <div class="select">
-          <label for="percentage">Percentage For Tip</label>
+          <label for="percentage">Tip % </label>
           <select id="tip" name="percentage" type="number">
             <option value=""></option>
             <option value="30"> 30%</option>
@@ -26,10 +26,11 @@
           </select>
         </div>
         <div class="people">
-          <label for="people"> No of People </label><input id="noPeople" type="number">
+          <label for="people"> People </label><input id="noPeople" type="number">
         </div>
         <div class="calButton">
           <button  id="calculate"> Calculate</button>
+          <button  id="Reset"> Reset</button>
         </div>
         <div id="billResult">
             
