--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="wrap">
       <div id="main" method="get">
+        <h3  class="heading">TIP CALCULATOR</h3>
         <div class="price">
           <label for="bill">Bill </label> <input id="billPrice" type="number"  value="">
         </div>
@@ -30,7 +31,7 @@
         </div>
         <div class="calButton">
           <button  id="calculate"> Calculate</button>
-          <button  id="Reset"> Reset</button>
+          <button  id="reset"> Reset</button>
         </div>
         <div id="billResult">
             
