--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <label for="percentage">Tip % </label>
           <select id="tip" name="percentage" type="number">
             <option value=""></option>
-            <option value="30"> 30%</option>
-            <option value="20">20% </option>
-            <option value="10"> 10% </option>
-            <option value="5"> 5%</option>
-            <option value="0">0% </option>
+            <option value="30">Excellent   (30%)</option>
+            <option value="20">Very Good  (20%) </option>
+            <option value="10">Good  (10%) </option>
+            <option value="5">Fair  (5%)</option>
+            <option value="0">Poor  (0%) </option>
           </select>
         </div>
         <div class="people">
